statum-macros/tests/ui/invalid_validators_wrong_signature.stderr
error: Error: validator `is_draft` for `impl DbRow` rebuilding `TaskMachine` state `TaskState::Draft` must declare only `&self`.
       Found: `fn is_draft(& self, extra: u8)`
       Expected: `fn is_draft(&self) -> Result<(), _>` or `fn is_draft(&self) -> Validation<()>`
       Reason: validator methods do not accept explicit machine-field parameters.
       Note: Machine `TaskMachine` injects these fields by bare name inside validator bodies: `name`. Remove explicit parameters and use those bindings directly.
       Fix: remove explicit parameters and read injected machine fields by bare name inside the validator body.
  --> tests/ui/invalid_validators_wrong_signature.rs:30:24
   |
30 |     fn is_draft(&self, extra: u8) -> Result<(), statum_core::Error> {
   |                        ^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_wrong_signature.rs:39:2
   |
39 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_wrong_signature.rs`
